Changed overflow for large screens, and moved Burger.module.css file to correct location

--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -14,6 +14,7 @@
     .Burger {
         width: 700px;
         height: 600px;
+        overflow: visible;
     }
 }
 
